test/corpus/checkbox_checked.txt
==================
Checked checkbox
==================

[x] Completed task

---

(document
  (task
    (checked_task
      (checked_checkbox)
      (description
        (main_line
          (text))))))
