test/corpus/checkbox_obsolete.txt
==================
Obsolete checkbox
==================

[~] Obsolete task

---

(document
  (task
    (obsolete_task
      (obsolete_checkbox)
      (description
        (main_line
          (text))))))
