test/corpus/checkbox_ongoing.txt
==================
Ongoing checkbox
==================

[@] In progress task

---

(document
  (task
    (ongoing_task
      (ongoing_checkbox)
      (description
        (main_line
          (text))))))
