test/corpus/due_date_full.txt
==================
Due date full
==================

[ ] Task -> 2025-12-31

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (due_date))))))
