test/corpus/due_date_month.txt
==================
Due date month
==================

[ ] Task -> 2025-12

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (due_date))))))
