test/corpus/due_date_quarter.txt
==================
Due date quarter
==================

[ ] Task -> 2025-Q4

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (due_date))))))
