test/corpus/due_date_week.txt
==================
Due date week
==================

[ ] Task -> 2025-W52

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (due_date))))))
