test/corpus/due_date_year.txt
==================
Due date year
==================

[ ] Task -> 2025

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (due_date))))))
