test/corpus/headline_simple.txt
==================
Simple headline
==================

Project

[ ] Task

---

(document
  (headline)
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text))))))
