test/corpus/jira.txt
==================
Jira issue basic
==================

[ ] jira:DEVELOP-789 Task

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (external_issue)
          (text))))))
