test/corpus/multiline_metadata.txt
==================
Multiline with metadata
==================

[ ] Task #tag
    More #data

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (tag))
        (indent
          (content_line
            (text)
            (tag)))))))
