test/corpus/priority_critical.txt
==================
Critical priority
==================

[ ] !! Critical task

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (priority)
        (main_line
          (text))))))
