test/corpus/priority_high.txt
==================
High priority
==================

[ ] ! High priority

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (priority)
        (main_line
          (text))))))
