test/corpus/priority_low.txt
==================
Low priority
==================

[ ] ... Low priority

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (priority)
        (main_line
          (text))))))
