test/corpus/priority_numeric.txt
==================
Numeric priority P1
==================

[ ] !p1 High priority task

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (priority)
        (main_line
          (text))))))

==================
Numeric priority P2
==================

[ ] !p2 Medium priority task

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (priority)
        (main_line
          (text))))))

==================
Numeric priority P10
==================

[ ] !p10 Multidigit priority

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (priority)
        (main_line
          (text))))))
