test/corpus/tag_multiple.txt
==================
Multiple tags
==================

[ ] Task #a #b #c

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (tag)
          (tag)
          (tag))))))
