test/corpus/tag_simple.txt
==================
Simple tag
==================

[ ] Task #tag

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (tag))))))
