test/corpus/tag_value.txt
==================
Tag with value
==================

[ ] Task #key=value

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (text)
          (tag))))))
