test/corpus/time_estimate.txt
==================
Time estimate
==================

[ ] ~2h Task

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (time_estimate)
          (text))))))
