test/corpus/time_estimate_and_spent.txt
==================
Estimate and spent
==================

[@] ~3h :2h Task

---

(document
  (task
    (ongoing_task
      (ongoing_checkbox)
      (description
        (main_line
          (time_estimate)
          (time_spent)
          (text))))))
