test/corpus/time_minutes.txt
==================
Time in minutes
==================

[ ] ~30m Task

---

(document
  (task
    (open_task
      (open_checkbox)
      (description
        (main_line
          (time_estimate)
          (text))))))
